[tool.poetry]
name = "Gulf of Mexico"
version = "0.1.1"
description = "An interpreter for the perfect programming language, Gulf of Mexico."
readme = "README.md"
authors = ["Vivaan Singhvi <singhvi.vivaan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pynput = "1.7.6"
pygithub = "2.2.0"
requests = "2.31.0"

[tool.poetry.scripts]
Gulf of Mexico = "Gulf of Mexico:main"

[tool.poetry.extras]
input = ["pynput"]
globals = ["pygithub"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
